correction footeur et alignement du contenu dans contact et le premier paragraphe de propos

--- a/style.css
+++ b/style.css
@@ -19,14 +19,19 @@ body {
     color: white;
     height: 100%;
     margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .page {
     max-width: 1440px;
     min-height: 100vh;
     margin: 0 auto 0 auto;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
+
 
 nav {
     display: flex;
@@ -38,8 +43,8 @@ nav {
 
 
 footer {
-    position: absolute;
-    bottom: 0;
+    margin-top: auto;
+    height: 40px;
     width: 100%;
     text-align: center;
 }
@@ -148,8 +153,10 @@ p {
 .info {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    gap: 20vw;
+    width: 100%;
 }
 
 
@@ -177,11 +184,17 @@ p.propos {
     width: 45%;
 }
 
+.info.propos {
+    gap: 5vw;
+}
+
+
 .competences {
     display: flex;
     justify-content: center;
     align-items: start;
     gap: 120px;
+
 }
 
 .logo {
@@ -191,6 +204,10 @@ p.propos {
     align-items: center;
     row-gap: 40px;
     column-gap: 60px;
+}
+
+.icon {
+    width: 80%;
 }
 
 .categorie {
